
SET(CVIEW_DATA_CLASSES
	ColorMap
	DefaultGLScreenDelegate
	DrawableObject
	Eye
	GimpGradient
	GLBar
	GLGrid
	GLImage
	GLInfinibandNetwork
	GLScreen
	GLText
	GLTooltip
	GLWorld
	Graph
	IdDatabase
	Identifiable
	Scene
)
IF(HAVE_ANTTWEAKBAR)
	LIST(APPEND ${CVIEW_DATA_CLASSES} AntTweakBarManager AntTweakBarOverlay)
ENDIF(HAVE_ANTTWEAKBAR)

SET(CVIEW_DATA_SRCS 
	utils.m
)
FOREACH (OBJ ${CVIEW_DATA_CLASSES})
  LIST(APPEND CVIEW_DATA_SRCS "${OBJ}.m")
  LIST(APPEND CVIEW_DATA_HDRS "${OBJ}.h")
ENDFOREACH(OBJ)

INCLUDE_DIRECTORIES(${GLUT_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
INCLUDE_DIRECTORIES("${OPENGL_INCLUDE_DIR}/GL") # hack.. fix later..
INCLUDE_DIRECTORIES(${FTGL_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${ImageMagick_MagickWand_INCLUDE_DIR})

ADD_DEFINITIONS(${FOUNDATION_FLAGS})
ADD_LIBRARY(cview SHARED ${CVIEW_DATA_SRCS} ${CVIEW_DATA_HDRS} )

TARGET_LINK_LIBRARIES(cview ${FOUNDATION_LIBRARIES})
TARGET_LINK_LIBRARIES(cview ${GLUT_LIBRARIES})
TARGET_LINK_LIBRARIES(cview ${OPENGL_LIBRARIES})
TARGET_LINK_LIBRARIES(cview ${FTGL_LIBRARIES})
TARGET_LINK_LIBRARIES(cview ${ImageMagick_MagickWand_LIBRARY})
TARGET_LINK_LIBRARIES(cview cview-data)


