
SET(CVIEW_DATA_CLASSES
	ColorMap
	DefaultGLScreenDelegate
	DrawableObject
	Eye
	GimpGradient
	GLBar
	GLGrid
	GLImage
	GLInfinibandNetwork
	GLScreen
	GLText
	GLTooltip
	GLWorld
	Graph
	IdDatabase
	Identifiable
	Scene
)

IF(HAVE_ANTTWEAKBAR)
	LIST(APPEND CVIEW_DATA_CLASSES AntTweakBarManager AntTweakBarOverlay)
ENDIF(HAVE_ANTTWEAKBAR)

IF(HAVE_GENDERS)
	LIST(APPEND CVIEW_DATA_CLASSES GLDataCenter DataCenter/Rack DataCenter/Node DataCenter/Locatable DataCenter/Vector)
ENDIF(HAVE_GENDERS)

SET(CVIEW_DATA_HDRS cview.h GLScreenDelegate.h Pickable.h Wand.h)

SET(CVIEW_DATA_SRCS utils.m)

FOREACH (OBJ ${CVIEW_DATA_CLASSES})
  LIST(APPEND CVIEW_DATA_SRCS "${OBJ}.m")
  LIST(APPEND CVIEW_DATA_HDRS "${OBJ}.h")
ENDFOREACH(OBJ)

INCLUDE_DIRECTORIES(${GLUT_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${GL_H_INCLUDE} ${OPENGL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${FREETYPE_INCLUDE_DIR_freetype2})
INCLUDE_DIRECTORIES(${FTGL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${WAND_INCLUDE_DIRS})

ADD_DEFINITIONS(${FOUNDATION_FLAGS})
ADD_DEFINITIONS(${WAND_CFLAGS})
LINK_DIRECTORIES(${FTGL_LIBRARY_DIRS} ${WAND_LIBRARY_DIRS} libcview-data)
ADD_LIBRARY(libcview ${LIB_TYPE} ${CVIEW_DATA_SRCS} ${CVIEW_DATA_HDRS} )
SET_TARGET_PROPERTIES(libcview PROPERTIES OUTPUT_NAME cview)

TARGET_LINK_LIBRARIES(libcview ${FOUNDATION_LIBRARIES})
TARGET_LINK_LIBRARIES(libcview ${GLUT_LIBRARIES})
TARGET_LINK_LIBRARIES(libcview ${OPENGL_LIBRARIES})
TARGET_LINK_LIBRARIES(libcview ${FTGL_LIBRARY})
TARGET_LINK_LIBRARIES(libcview ${WAND_LIBRARIES} )
IF(MINGW)
	TARGET_LINK_LIBRARIES(libcview psapi)
ENDIF()
TARGET_LINK_LIBRARIES(libcview cview-data)
IF(HAVE_GENDERS)
	TARGET_LINK_LIBRARIES(libcview ${GENDERS})
ENDIF()
IF(HAVE_ANTTWEAKBAR)
	TARGET_LINK_LIBRARIES(libcview ${ATB})
ENDIF()

SET_TARGET_PROPERTIES(libcview PROPERTIES SOVERSION 0.1)
INSTALL(TARGETS libcview DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT "libcview_Library")
INSTALL(FILES ${CVIEW_DATA_HDRS} DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${CMAKE_PROJECT_NAME}" COMPONENT "libcview_Header_Files")

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/cview.pc.in ${CMAKE_CURRENT_BINARY_DIR}/cview.pc)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/cview.pc DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig COMPONENT "libcview_pkg_config_file")
