
ADD_DEFINITIONS(${FOUNDATION_FLAGS})
INCLUDE_DIRECTORIES(${GLUT_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${GL_H_INCLUDE} ${OPENGL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${FTGL_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${ImageMagick_MagickWand_INCLUDE_DIR})


MACRO(ADD_PROG name)
	MESSAGE("Adding executable ${name}")
	ADD_EXECUTABLE(${name} ${ARGN})
	TARGET_LINK_LIBRARIES(${name} ${FOUNDATION_LIBRARIES})
	TARGET_LINK_LIBRARIES(${name} ${GLUT_LIBRARIES})
	TARGET_LINK_LIBRARIES(${name} ${OPENGL_LIBRARIES})
	TARGET_LINK_LIBRARIES(${name} ${FTGL_LIBRARIES})
	TARGET_LINK_LIBRARIES(${name} ${ImageMagick_MagickWand_LIBRARY})
	TARGET_LINK_LIBRARIES(${name} cview cview-data)
	INSTALL(TARGETS ${name} DESTINATION bin)
ENDMACRO(ADD_PROG)

ADD_PROG(cview-prog cview.m CViewScreenDelegate.m CViewScreenDelegate.m CViewScreenDelegate.m LoadClasses.m ObjectTracker.m)
SET_TARGET_PROPERTIES(cview-prog PROPERTIES OUTPUT_NAME cview)
ADD_PROG(cviewall cviewall.m CViewScreenDelegate.m LoadClasses.m CViewAllScreenDelegate.m) 
IF(OSMESA_FOUND)
	ADD_PROG(oscview oscview.m glutstub.c)
	TARGET_LINK_LIBRARIES(oscview ${OSMESA_LIBRARIES})
ENDIF(OSMESA_FOUND)
