
SET(CMAKE_CXX_FLAGS ${FOUNDATION_FLAGS})
INCLUDE_DIRECTORIES(${GLUT_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${GL_H_INCLUDE} ${OPENGL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${FREETYPE_INCLUDE_DIR_freetype2})
INCLUDE_DIRECTORIES(${FTGL_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${WAND_INCLUDE_DIRS})


MACRO(ADD_PROG name)
	MESSAGE("Adding executable ${name}")
	if (MINGW)
		SET(EXTRA "CMakeSetup.rc")
		#FILE(COPY ${CMAKE_SOURCE_DIR}/cview.ico DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
	ENDIF()
	ADD_EXECUTABLE(${name} ${ARGN} ${EXTRA})
	TARGET_LINK_LIBRARIES(${name} libcview libcview-data)
	INSTALL(TARGETS ${name} DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT Binaries)
ENDMACRO(ADD_PROG)

IF(HAVE_GENDERS) 
	LIST(APPEND CVIEW_EXTRA_SRC DataCenterCViewScreenDelegate.m)
ENDIF()

LINK_DIRECTORIES(${WAND_LIBRARY_DIRS})

ADD_PROG(cview cview.m CViewScreenDelegate.m CViewScreenDelegate.m CViewScreenDelegate.m LoadClasses.m ObjectTracker.m ${CVIEW_EXTRA_SRC})
ADD_PROG(cviewall cviewall.m CViewScreenDelegate.m LoadClasses.m CViewAllScreenDelegate.m) 
IF(OSMESA_FOUND)
	ADD_PROG(oscview oscview.m glutstub.c)
	TARGET_LINK_LIBRARIES(oscview ${OSMESA_LIBRARIES})
ENDIF(OSMESA_FOUND)

