

ADD_DEFINITIONS(${FOUNDATION_FLAGS})
INCLUDE_DIRECTORIES(${GLUT_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${GL_H_INCLUDE} ${OPENGL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${FTGL_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${ImageMagick_MagickWand_INCLUDE_DIR})

MACRO(ADD_TEST name) 
	MESSAGE("Adding Test for ${name}")
	IF(${ARGC} EQUAL 1)
		ADD_EXECUTABLE(${name} ${name}.m)
	ELSE()
		ADD_EXECUTABLE(${name} ${ARGN})
	ENDIF()
	TARGET_LINK_LIBRARIES(${name} libcview libcview-data)
ENDMACRO(ADD_TEST)

ADD_TEST(calcdatasettest)
ADD_TEST(datasettest)
ADD_TEST(ggrtest)
ADD_TEST(glbartest)
ADD_TEST(glgridtest)
ADD_TEST(glimagetest)
ADD_TEST(glscreentest)
ADD_TEST(graphtest)
ADD_TEST(ibtest)
ADD_TEST(iddatabasetest)
ADD_TEST(streamdatasettest)
ADD_TEST(webdatasettest)
ADD_TEST(xydatasettest)
ADD_TEST(datasetloadtest)

ADD_EXECUTABLE(calcdatatest calcdatatest.c)
TARGET_LINK_LIBRARIES(calcdatatest libcview-data)

FILE(COPY slowcat funcdata streamdata.txt gimpgradient.ggr DESTINATION "${CMAKE_BINARY_DIR}/tests")

ADD_CUSTOM_COMMAND(OUTPUT testdata.xy COMMAND python funcdata xy testdata.xy COMMENT "Building Test XY Data")
ADD_CUSTOM_TARGET(buildtestdata ALL DEPENDS testdata.xy)
